<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:orientation="vertical" >

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:orientation="horizontal" >

	        <ImageView
	            android:id="@+id/adminVendorPicture"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="36dp"
	            android:contentDescription="@string/vendorPicture"
	            android:src="@drawable/no_image" />

	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:orientation="vertical" >

	            <TextView
	                android:id="@+id/adminVendorName"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:layout_marginTop="20dp"
	                android:textAppearance="?android:attr/textAppearanceLarge" />

	            <TextView
	                android:id="@+id/adminVendorAddress"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:layout_marginTop="10dp"
	                android:textAppearance="?android:attr/textAppearanceMedium" />

	            <TextView
	                android:id="@+id/adminVendorStatus"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="5dp"
	                android:layout_marginTop="10dp"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="50dp"
	        android:layout_weight="0.28"
	        android:orientation="vertical" >

	        <Button
	            android:id="@+id/button_edit_general_info"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:onClick="editGenInfo"
	            android:text="@string/edit_general_info" />

	        <Button
	            android:id="@+id/button_edit_menu"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:onClick="editMenu"
	            android:text="@string/edit_menu" />

	        <Button
	            android:id="@+id/button_view_pending_order"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:onClick="viewPendOrder"
	            android:text="View Pending Orders" />

	        <Button
	            android:id="@+id/button_view_order_history"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.02"
	            android:text="@string/view_order_history" />

	    </LinearLayout>
		
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/textView_wait_time"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Estimated Wait Time (Mins): " />

	        <EditText
	            android:id="@+id/waitTime"
	            android:layout_width="44dp"
	            android:layout_height="wrap_content"
	            android:inputType="number" />

	        <Button
	            android:id="@+id/button_set_wait_time"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="setWaitTime"
	            android:text="Set" />

	    </LinearLayout>

	</LinearLayout>

</ScrollView>